load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "scandeps_proto",
    srcs = ["cppscandeps.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

cc_proto_library(
    name = "scandeps_cc_proto",
    deps = [
        ":scandeps_proto",
    ],
)

cc_grpc_library(
    name = "scandeps_cc",
    srcs = [":scandeps_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":scandeps_cc_proto"],
)

go_proto_library(
    name = "scandeps_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/bazelbuild/reclient/api/scandeps",
    proto = ":scandeps_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "scandeps",
    embed = [":scandeps_go_proto"],
    importpath = "github.com/bazelbuild/reclient/api/scandeps",
    visibility = ["//visibility:public"],
)
