load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "stats_proto",
    srcs = ["stats.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//api/log:log_proto",
        "//api/stat:stat_proto",
    ],
)

go_proto_library(
    name = "stats_go_proto",
    importpath = "github.com/bazelbuild/reclient/api/stats",
    proto = ":stats_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/log",
        "//api/stat",
    ],
)

go_library(
    name = "stats",
    embed = [":stats_go_proto"],
    importpath = "github.com/bazelbuild/reclient/api/stats",
    visibility = ["//visibility:public"],
)
