load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bigquery_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/bigquery",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/bigquery",
        "//internal/pkg/logger",
        "//internal/pkg/rbeflag",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "bigquery",
    embed = [":bigquery_lib"],
    visibility = ["//visibility:public"],
)
