load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "downloadmismatch_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/downloadmismatch",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/downloadmismatch",
        "//internal/pkg/rbeflag",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/flags",
    ],
)

go_binary(
    name = "downloadmismatch",
    embed = [":downloadmismatch_lib"],
    visibility = ["//visibility:public"],
)
