load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dumpstats_lib",
    srcs = ["main.go"],
    importpath = "team/foundry-x/re-client/cmd/dumpstats",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/bootstrap",
        "//internal/pkg/rbeflag",
        "//internal/pkg/stats",
        "//pkg/version",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/moreflag",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "dumpstats",
    embed = [":dumpstats_lib"],
    visibility = ["//visibility:public"],
)
