load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "metricsuploader_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/metricsuploader",
    visibility = ["//visibility:private"],
    deps = [
        "//api/stats",
        "//internal/pkg/bigquery",
        "//internal/pkg/collectlogfiles",
        "//internal/pkg/monitoring",
        "//internal/pkg/rbeflag",
        "//internal/pkg/stats",
        "//pkg/version",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/client",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/flags",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/moreflag",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_binary(
    name = "metricsuploader",
    embed = [":metricsuploader_lib"],
    visibility = ["//visibility:public"],
)
