load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "reclientreport_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/reclientreport",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/collectlogfiles",
        "//internal/pkg/rbeflag",
        "//internal/pkg/reproxypid",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/moreflag",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "reclientreport",
    embed = [":reclientreport_lib"],
    visibility = ["//visibility:public"],
)
