load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "reproxystatus_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/reproxystatus",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/printer",
        "//internal/pkg/rbeflag",
        "//internal/pkg/reproxystatus",
        "@com_github_fatih_color//:color",
        "@com_github_gosuri_uilive//:uilive",
    ],
)

go_binary(
    name = "reproxystatus",
    embed = [":reproxystatus_lib"],
    visibility = ["//visibility:public"],
)
