load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rewrapper_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/rewrapper",
    visibility = ["//visibility:private"],
    deps = [
        "//api/proxy",
        "//internal/pkg/ipc",
        "//internal/pkg/protoencoding",
        "//internal/pkg/rbeflag",
        "//internal/pkg/rewrapper",
        "//internal/pkg/version",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/moreflag",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "rewrapper",
    embed = [":rewrapper_lib"],
    visibility = ["//visibility:public"],
)
