load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rpl2cloudtrace_lib",
    srcs = ["rpl2cloudtrace.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/rpl2cloudtrace",
    visibility = ["//visibility:private"],
    deps = [
        "//api/log",
        "//internal/pkg/labels",
        "//internal/pkg/logger",
        "//internal/pkg/rbeflag",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/moreflag",
        "@com_github_golang_glog//:glog",
        "@com_google_cloud_go//trace/apiv2",
        "@go_googleapis//google/devtools/cloudtrace/v2:cloudtrace_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "rpl2cloudtrace",
    embed = [":rpl2cloudtrace_lib"],
    visibility = ["//visibility:public"],
)
