load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rpl2trace_lib",
    srcs = ["rpl2trace.go"],
    importpath = "team/foundry-x/re-client/cmd/rpl2trace",
    visibility = ["//visibility:private"],
    deps = [
        "//api/log",
        "//internal/pkg/logger",
        "//internal/pkg/rbeflag",
        "@com_github_bazelbuild_remote_apis_sdks//go/api/command",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/moreflag",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "rpl2trace",
    embed = [":rpl2trace_lib"],
    visibility = ["//visibility:public"],
)
