load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "version_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/reclient/cmd/version",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/version",
    ],
)

go_binary(
    name = "version",
    embed = [":version_lib"],
    visibility = ["//visibility:public"],
)
